--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-big-calendar": "^1.8.12",
     "moment": "^2.30.1",
     "next": "^14.2.14",
+    "prisma": "^5.21.1",
     "react": "^18",
     "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.0.0",
@@ -28,6 +29,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prettier-plugin-prisma": "^5.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
